OS-17:fix build failing